--- a/main.html
+++ b/main.html
@@ -7,6 +7,28 @@
 </head>
 
 <body>
+	<h1 style="text-align:center;">My Playlist</h1>
+	<a href="#" target="_blank">Just anchor tag
+	<div id="playlist">
+		<ul>
+			<li>Song 1</li>
+			<li>Song 2</li>
+			<li>Song 3</li>
+			<li>Song 4</li>
+			<li>Song 5</li>
+		</ul>
+	</div>
+	<h1 style="text-align:center;">Now Playing...</h2>
+		<div>
+			<video controls>
+				<source  src="src="https://www.w3schools.com/tags/movie.mp4"">
+			</video>
+			<h1 style="text-align:center;">MP3 songs</h2>
+		<audio controls>
+			<source src="https://www.pagalworld.com.se/files/download/id/64630">
+		</audio>
+		</div>
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
