--- a/main.html
+++ b/main.html
@@ -19,13 +19,13 @@
 		</ul>
 	</div>
 	<h1 style="text-align:center;">Now Playing...</h2>
-		<div>
-			<video controls>
-				<source  src="src="https://www.w3schools.com/tags/movie.mp4"">
+		<div >
+			<video class="player_one"controls>
+				<source  type="video/mp4" src="src="https://www.w3schools.com/tags/movie.mp4"">
 			</video>
 			<h1 style="text-align:center;">MP3 songs</h2>
-		<audio controls>
-			<source src="https://www.pagalworld.com.se/files/download/id/64630">
+		<audio class="player_two"controls>
+			<source type="audio/mp3" src="https://www.pagalworld.com.se/files/download/id/64630">
 		</audio>
 		</div>
 	
