--- a/main.html
+++ b/main.html
@@ -8,23 +8,23 @@
 
 <body>
 	<h1 style="text-align:center;">My Playlist</h1>
-	<a href="#" target="_blank">Just anchor tag
-	<div id="playlist">
+	
+	<div id="player_one">
 		<ul>
-			<li>Song 1</li>
-			<li>Song 2</li>
-			<li>Song 3</li>
-			<li>Song 4</li>
-			<li>Song 5</li>
+			<li><a href="#" target="_blank">Just anchor tagSong 1</a></li>
+			<li><a href="#" target="_blank">Just anchor tagSong 2</a></li>
+			<li><a href="#" target="_blank">Just anchor tagSong 3</a></li>
+			<li><a href="#" target="_blank">Just anchor tag>Song 4</a></li>
+			<li><a href="#" target="_blank">Just anchor tagSong 5</a></li>
 		</ul>
 	</div>
 	<h1 style="text-align:center;">Now Playing...</h2>
-		<div >
-			<video class="player_one"controls>
+		<div class="player_two">
+			<video controls>
 				<source  type="video/mp4" src="src="https://www.w3schools.com/tags/movie.mp4"">
 			</video>
 			<h1 style="text-align:center;">MP3 songs</h2>
-		<audio class="player_two"controls>
+		<audio controls>
 			<source type="audio/mp3" src="https://www.pagalworld.com.se/files/download/id/64630">
 		</audio>
 		</div>
