--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<h1 style="text-align:center;">My Playlist</h1>
 	
-	<div id="player_one">
+	<div class="player_one">
 		<ul>
 			<li><a href="#" target="_blank">Just anchor tagSong 1</a></li>
 			<li><a href="#" target="_blank">Just anchor tagSong 2</a></li>
